# pyspark-regression

./: .coveragec  .flake8  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  constraints.txt  example.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: lint.yaml  release.yaml
api_reference/RegressionTest/: index.html
api_reference/SchemaMutation/: index.html
docs/: classes.md  examples.md  index.md  installation.md  methods.md  reference.md
docs/api_reference/: RegressionTest.md  SchemaMutation.md
examples/: index.html
installation/: index.html
reference/: index.html
src/pyspark_regression/: __init__.py  example.py  main.py  regression.py
tests/pyspark_regression/: test_regression.py
