[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspark-regression"
description = "A tool for regression testing Spark Dataframes in Python"
keywords = ["apache-spark", "spark", "regression", "testing", "regression testing", "data testing"]
authors = [
    {name = "Forrest Bajbek", email = "forrestbajbek@gmail.com"},
]
maintainers = [
    {name = "Forrest Bajbek", email = "forrestbajbek@gmail.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
license = {file = "LICENSE"}
version = "3.5.1"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy==2.0.0",
    "pandas==2.2.2",
    "pyspark==3.5.1",
    "tabulate==0.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[project.urls]
Homepage = "https://github.com/forrest-bajbek/pyspark-regression"
Repository = "https://github.com/forrest-bajbek/pyspark-regression"
Issues = "https://github.com/forrest-bajbek/pyspark-regression/issues"
PyPI = "https://pypi.org/project/pyspark-regression/"
Documentation = "https://forrest-bajbek.github.io/pyspark-regression"

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "build==1.2.1",
    "coverage==7.5.4",
    "flake8==7.1.0",
    "isort==5.13.2",
    "mkdocs-material==9.5.28",
    "mkdocstrings-python==1.10.5",
    "pytest-cov==5.0.0",
    "pytest==8.2.2",
    "setuptools",
    "twine==5.1.1",
    "wheel",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
append_only = true
line_length = 88
combine_as_imports = true
skip = ["build", ".tox", "venv"]
skip_glob = ["*.pyi"]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]