[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspark-regression"
description = "A tool for regression testing Spark Dataframes in Python"
keywords = ["apache-spark", "spark", "regression", "testing", "regression testing", "data testing"]
authors = [
    {name = "Forrest Bajbek", email = "forrestbajbek@gmail.com"},
]
maintainers = [
    {name = "Forrest Bajbek", email = "forrestbajbek@gmail.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
license = {file = "LICENSE"}
version = "3.5.1"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy==1.23.5",
    "pandas==1.5.3",
    "pyarrow==8.0.0",
    "pyspark==3.5.1",
    "pytz==2022.7",
    "six==1.16.0",
    "python-dateutil==2.8.2",
    "tabulate==0.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[project.urls]
Homepage = "https://github.com/forrest-bajbek/pyspark-regression"
Repository = "https://github.com/forrest-bajbek/pyspark-regression"
Issues = "https://github.com/forrest-bajbek/pyspark-regression/issues"
PyPI = "https://pypi.org/project/pyspark-regression/"
Documentation = "https://forrest-bajbek.github.io/pyspark-regression"

[project.optional-dependencies]
dev = [
    "black==22.6.0",
    "build",
    "coverage",
    "flake8",
    "isort",
    "mkdocs-material",
    "mkdocstrings-python",
    "pytest-cov",
    "pytest",
    "setuptools==65.6.3",
    "twine",
    "wheel==0.38.4",
]

[tool.black]
line-length = 160
target-version = ['py310']

[tool.isort]
append_only = true
line_length = 160
combine_as_imports = true
skip = ["build", ".tox", "venv"]
skip_glob = ["*.pyi"]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]