[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspark-regression"
description = "A tool for regression testing Spark Dataframes in Python"
keywords = ["apache-spark", "spark", "regression", "testing", "regression testing", "data testing"]
authors = [
    {name = "Forrest Bajbek", email = "forrestbajbek@gmail.com"},
]
maintainers = [
    {name = "Forrest Bajbek", email = "forrestbajbek@gmail.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
license = {file = "LICENSE"}
version = "3.5.5"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3,<4",
    "tabulate",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[project.urls]
Homepage = "https://github.com/forrest-bajbek/pyspark-regression"
Repository = "https://github.com/forrest-bajbek/pyspark-regression"
Issues = "https://github.com/forrest-bajbek/pyspark-regression/issues"
PyPI = "https://pypi.org/project/pyspark-regression/"
Documentation = "https://forrest-bajbek.github.io/pyspark-regression"

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "coverage",
    "flake8",
    "isort",
    "mkdocs-material",
    "mkdocstrings-python",
    "pre-commit",
    "pytest-cov",
    "pytest",
    "setuptools",
    "twine",
    "wheel",
]

[tool.black]
line-length = 160
target-version = ['py310']

[tool.isort]
append_only = true
line_length = 160
combine_as_imports = true
skip = ["build", ".tox", "venv"]
skip_glob = ["*.pyi"]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
