[metadata]
name = pyspark-regression
version = 1.0
author = Forrest Bajbek
author_email = forrestbajbek@gmail.com
description = A tool for regression testing Spark Dataframes in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/forrest-bajbek/pyspark-regression
classifiers =
     Development Status :: 5 - Production/Stable
     Operating System :: POSIX :: Linux
     Operating System :: MacOS :: MacOS X
     License :: OSI Approved :: Apache Software License
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
packages = find:
python_requires = >=3.7
include_package_data = True

[tool:pytest]
testpaths = tests
