[metadata]
name = pyspark-regression
version = 3.3
author = Forrest Bajbek
author_email = forrestbajbek@gmail.com
description = A tool for regression testing Spark Dataframes in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/forrest-bajbek/pyspark-regression
classifiers =
     Development Status :: 5 - Production/Stable
     Operating System :: POSIX :: Linux
     Operating System :: MacOS :: MacOS X
     License :: OSI Approved :: Apache Software License
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
install_requires =
    pandas
    pyspark>=3.3<3.4
    tabulate

[options.extras_require]
dev =
     black
     build
     flake8
     isort
     pytest
     wheel

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    ignore::DeprecationWarning

[flake8]
max-line-length = 88
extend-ignore = E501