[metadata]
name = pyspark-regression
version = 1.1.0
url = https://forrest-bajbek.github.io/pyspark-regression/
project_urls =
    Documentation=https://forrest-bajbek.github.io/pyspark-regression/
    Source Code=https://github.com/forrest-bajbek/pyspark-regression
    PyPI=https://pypi.org/project/pyspark-regression/
author = Forrest Bajbek
author_email = forrestbajbek@gmail.com
maintainer = Forrest Bajbek
maintainer_email = forrestbajbek@gmail.com
summary = A tool for regression testing Spark Dataframes in Python
description = A tool for regression testing Spark Dataframes in Python
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files =
    LICENSE
classifiers =
     Development Status :: 5 - Production/Stable
     Operating System :: POSIX :: Linux
     Operating System :: MacOS :: MacOS X
     License :: OSI Approved :: Apache Software License
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.8,<3.11
install_requires =
    pandas
    pyspark>=3
    tabulate

[options.packages.find]
where=src
include =
    pyspark_regression*

[options.extras_require]
dev =
    build
    twine
    wheel
    setuptools
    black
    flake8
    isort
    mkdocs-material
    mkdocstrings-python
    coverage
    pytest
    pytest-cov
    pytest-xdist